--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -20,7 +20,7 @@ spec:
         ports:
         - containerPort: 80
         env:
-        {{ range $k, $v := .Values.env }}
+        {{- range $k, $v := .Values.env }}
           - name: {{ $k }}
             value: {{ $v }}
-        {{ end }}
+        {{- end }}
