--- a/env-dev/frontend.yaml
+++ b/env-dev/frontend.yaml
@@ -1,24 +1,13 @@
 env:
   CATALOGUE_HOST: catalogue
-
-env1:
-  - name: CATALOGUE_PORT
-    value: "8080"
-  - name: USER_HOST
-    value: user
-  - name: USER_PORT
-    value: "8080"
-  - name: CART_HOST
-    value: cart
-  - name: CART_PORT
-    value: "8080"
-  - name: SHIPPING_HOST
-    value: shipping
-  - name: SHIPPING_PORT
-    value: "8080"
-  - name: PAYMENT_HOST
-    value: payment
-  - name: PAYMENT_PORT
-    value: "8080"
+  CATALOGUE_PORT: "8080"
+  USER_HOST : user
+  USER_PORT : "8080"
+  CART_HOST : cart
+  CART_PORT : "8080"
+  SHIPPING_HOST : shipping
+  SHIPPING_PORT : "8080"
+  PAYMENT_HOST : payment
+  PAYMENT_PORT : "8080"
 
 appName: frontend
