--- a/env-dev/shipping.yaml
+++ b/env-dev/shipping.yaml
@@ -2,7 +2,7 @@ env:
   CART_ENDPOINT: "cart:8080"
   DB_HOST: mysql-dev.rdevopsb81.online
 
-appName: user
+appName: shipping
 service:
   containerPort: 8080
   type: ClusterIP
