--- a/env-dev/catalogue.yaml
+++ b/env-dev/catalogue.yaml
@@ -8,6 +8,15 @@ service:
   type: ClusterIP
   servicePort: 8080
 
+schema:
+  enabled: false
+  env:
+    DB_TYPE: mongo
+    APP_GIT_URL: https://github.com/roboshop-devops-project-v3/catalogue
+    DB_HOST: mongodb-dev.rdevopsb81.online
+  containers:
+    - master-data
+
 
 
 
