--- a/templates/db-job.yaml
+++ b/templates/db-job.yaml
@@ -15,6 +15,8 @@ spec:
           - name: {{ $k }}
             value: {{ $v | quote }}
         {{- end }}
+        - name: SCHEMA_FILE
+          value: db/{{ . }}.{{ $.Values.dbExtention }}
       restartPolicy: Never
 {{ end }}
 {{ end }}
