--- a/templates/db-job.yaml
+++ b/templates/db-job.yaml
@@ -14,8 +14,7 @@ spec:
         {{- range $k, $v := $.Values.schema.env }}
           - name: {{ $k }}
             value: {{ $v | quote }}
-        {{- end }}
-
+        {{ end }}
         - name: SCHEMA_FILE
           value: db/{{ . }}.{{ $.Values.dbExtention }}
       restartPolicy: Never
