--- a/templates/db-job.yaml
+++ b/templates/db-job.yaml
@@ -12,7 +12,7 @@ spec:
         image: public.ecr.aws/w8x4g9h7/roboshop-v3/schema-load
         env:
           - name: SCHEMA_FILE
-            value: db/{{ . }}.{{ $.Values.dbExtention }}
+            value: db/{{ . }}.{{ $.Values.schema.dbExtention }}
 
         {{- range $k, $v := $.Values.schema.env }}
           - name: {{ $k }}
