--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -21,6 +21,6 @@ spec:
         - containerPort: {{ .Values.service.containerPort }}
         env:
         {{- range $k, $v := .Values.env }}
-          - name: {{ $k }}
+          - name: {{ $k | quote }}
             value: {{ $v | quote }}
         {{- end }}
