--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -19,8 +19,6 @@ spec:
         image: 897722697588.dkr.ecr.us-east-1.amazonaws.com/roboshop-{{ .Values.appName }}:{{ .Values.COMMIT_ID }}
         ports:
         - containerPort: {{ .Values.service.containerPort }}
-        env:
-        {{- range $k, $v := .Values.env }}
-          - name: {{ $k | quote }}
-            value: {{ $v | quote }}
-        {{- end }}
+        envFrom:
+        - secretRef:
+            name: {{ .Values.appName }}
