--- a/env-dev/catalogue.yaml
+++ b/env-dev/catalogue.yaml
@@ -1,6 +1,6 @@
-env:
-  MONGO: true
-  MONGO_URL: "mongodb://mongodb-dev.rdevopsb81.online:27017/catalogue"
+# env:
+#   MONGO: true
+#   MONGO_URL: "mongodb://mongodb-dev.rdevopsb81.online:27017/catalogue"
 
 appName: catalogue
 service:
@@ -11,10 +11,6 @@ service:
 schema:
   enabled: true
   dbExtention: js
-  env:
-    DB_TYPE: mongo
-    APP_GIT_URL: https://github.com/raghudevopsb81/roboshop-catalogue
-    DB_HOST: mongodb-dev.rdevopsb81.online
   containers:
     - master-data
 
