--- a/env-dev/user.yaml
+++ b/env-dev/user.yaml
@@ -1,7 +1,7 @@
-env:
-  MONGO: "true"
-  MONGO_URL: "mongodb://mongodb-dev.rdevopsb81.online:27017/users"
-  REDIS_URL: "redis://redis-dev.rdevopsb81.online:6379"
+# env:
+#   MONGO: "true"
+#   MONGO_URL: "mongodb://mongodb-dev.rdevopsb81.online:27017/users"
+#   REDIS_URL: "redis://redis-dev.rdevopsb81.online:6379"
 
 appName: user
 service:
