--- a/templates/db-job.yaml
+++ b/templates/db-job.yaml
@@ -16,10 +16,9 @@ spec:
           - name: SCHEMA_FILE
             value: db/{{ . }}.{{ $.Values.schema.dbExtention }}
 
-        {{- range $k, $v := $.Values.schema.env }}
-          - name: {{ $k }}
-            value: {{ $v | quote }}
-        {{- end }}
+        envFrom:
+        - secretRef:
+            name: {{ .Values.appName }}-job
       restartPolicy: Never
 {{ end }}
 {{ end }}
