--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -33,7 +33,7 @@ spec:
           httpGet:
             path: /health
             port: app
-          initialDelaySeconds: 5
-          periodSeconds: 5
+          initialDelaySeconds: {{ .Values.probes.initialDelaySeconds }}
+          periodSeconds: {{ .Values.probes.periodSeconds }}
 
 
