--- a/env-dev/catalogue.yaml
+++ b/env-dev/catalogue.yaml
@@ -18,6 +18,12 @@ hpa:
   minReplicas: 2
   maxReplicas: 10
 
+resources:
+  requestsMemory: "200Mi"
+  limitsMemory: "500Mi"
+  requestsCpu: "50m"
+  limitsCpu: "100m"
+
 
 
 
