--- a/env-dev/user.yaml
+++ b/env-dev/user.yaml
@@ -13,6 +13,11 @@ hpa:
   minReplicas: 2
   maxReplicas: 10
 
+resources:
+  requestsMemory: "200Mi"
+  limitsMemory: "500Mi"
+  requestsCpu: "50m"
+  limitsCpu: "100m"
 
 
 
