--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -35,5 +35,11 @@ spec:
             port: app
           initialDelaySeconds: {{ .Values.probes.initialDelaySeconds }}
           periodSeconds: {{ .Values.probes.periodSeconds }}
-
+        resources:
+          requests:
+            memory: {{ .Values.resources.requestsMemory }}
+            cpu: {{ .Values.resources.requestsCpu }}
+          limits:
+            memory: {{ .Values.resources.limitsMemory }}
+            cpu: {{ .Values.resources.limitsCpu }}
 
