--- a/templates/db-job.yaml
+++ b/templates/db-job.yaml
@@ -8,6 +8,8 @@ metadata:
 spec:
   template:
     spec:
+      securityContext:
+        readOnlyRootFilesystem: true
       containers:
       - name: {{ $.Values.appName }}-{{ . }}-load
         image: 897722697588.dkr.ecr.us-east-1.amazonaws.com/roboshop-schema-load:latest
