--- a/env-dev/cart.yaml
+++ b/env-dev/cart.yaml
@@ -19,5 +19,6 @@ resources:
   requestsCpu: "100m"
   limitsCpu: "150m"
 
-
+istio:
+  allowed_apps: "cluster.local/ns/default/sa/frontend", "cluster.local/ns/default/sa/payment", "cluster.local/ns/default/sa/shipping"
 
