--- a/env-dev/catalogue.yaml
+++ b/env-dev/catalogue.yaml
@@ -24,6 +24,7 @@ resources:
   requestsCpu: "100m"
   limitsCpu: "150m"
 
-
+istiod:
+  allowed_apps: ["cluster.local/ns/default/sa/frontend", "cluster.local/ns/default/sa/cart"]
 
 
