--- a/env-dev/user.yaml
+++ b/env-dev/user.yaml
@@ -20,4 +20,5 @@ resources:
   limitsCpu: "150m"
 
 
-
+istiod:
+  allowed_apps: ["cluster.local/ns/default/sa/frontend", "cluster.local/ns/default/sa/payment"]
