--- a/env-dev/frontend.yaml
+++ b/env-dev/frontend.yaml
@@ -34,4 +34,4 @@ securityContext:
   readOnlyRootFilesystem: false
 
 istiod:
-  allowed_apps: ["cluster.local/ns/default/sa/frontend", "cluster.local/ns/devops/sa/nginx-ingress"]
+  enabled: false
