--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -13,6 +13,7 @@ spec:
     metadata:
       labels:
         {{- include "common.labels" . | indent 8 }}
+        sidecar.istio.io/inject: {{ .Values.istiod.enabled }
     spec:
       containers:
       - name: {{ .Values.appName }}
