--- a/templates/db-job.yaml
+++ b/templates/db-job.yaml
@@ -9,7 +9,7 @@ spec:
   template:
     metadata:
       labels:
-        sidecar.istio.io/inject: {{ .Values.istiod.enabled }}
+        sidecar.istio.io/inject: false
     spec:
       containers:
       - name: {{ $.Values.appName }}-{{ . }}-load
