--- a/templates/authorization-policy.yml
+++ b/templates/authorization-policy.yml
@@ -15,7 +15,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      {{- include "common.labels" . | indent 6 }}
+      appName: {{ .Values.appName }}
   action: ALLOW
   rules:
   - from:
@@ -32,7 +32,7 @@ metadata:
 spec:
   selector:
     matchLabels:
-      {{- include "common.labels" . | indent 6 }}
+      appName: {{ .Values.appName }}
   action: DENY
   rules:
   - from:
