--- a/templates/deployment.yaml
+++ b/templates/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       labels:
         {{- include "common.labels" . | indent 8 }}
     spec:
+      serviceAccountName: {{ .Values.appName }}
       containers:
       - name: {{ .Values.appName }}
         image: 897722697588.dkr.ecr.us-east-1.amazonaws.com/roboshop-{{ .Values.appName }}:{{ .Values.COMMIT_ID }}
