--- a/templates/authorization-policy.yml
+++ b/templates/authorization-policy.yml
@@ -6,7 +6,7 @@ metadata:
   name: roboshop-{{ .Values.appName }}
 spec:
   mtls:
-    mode: STRICT
+    mode: PERMISSIVE
 ---
 apiVersion: security.istio.io/v1
 kind: AuthorizationPolicy
